# cb_back

./: .env.example  .gitignore  CMR.md  DATABASE_CLEANUP_REPORT.md  IMPLEMENTATION_REPORT.md  README_SECURITY.md  aerich.ini  alembic.ini  claude.md  hello.py  improved_result.md  kaizenten.md  pyproject.toml  test_api_endpoints.py  test_branching.py  test_runner.py  toughts.md
alembic/: env.py
alembic/versions/: 001_add_available_models_table.py  63b23178d2f1_remove_unused_userchatposition_table.py  a458667e6754_add_templates_and_presets_tables_only.py  faa78268640b_add_missing_core_tables.py
docs/: CODEBASE_ANALYSIS_REPORT.md  CRITICAL_ISSUES_ANALYSIS.md  DEPLOYMENT_SECURITY_CHECKLIST.md  exporter.py
migrations/models/: 0_20250608025443_init.py
src/entity/: chat_tree.py  message.py  message_entity.py
src/infra/: auth.py  config.py  di.py  logging_config.py  openrouter_client.py  security_config.py  sqlite_client.py
src/openrouter/: openrouter_api.py  openrouter_client.py
src/port/: chat_repo.py  llm_client.py  llm_service.py  template_repository.py  user_repository.py
src/test/: test_analytics.py  test_api_endpoint.py  test_api_endpoint2.py  test_api_integration.py  test_auth.py  test_auth_efficiency.py  test_chat_model_integration.py  test_chat_session_service.py  test_chat_unimplemented_features.py  test_config.py  test_di_security.py  test_exception_handling.py  test_history_service.py  test_http_client_concurrency.py  test_improvements.py  test_integration.py  test_llm_details.py  test_llm_interaction.py  test_logging.py  test_login.py  test_message_cache_limits.py  test_message_processing_service.py  test_model_management.py  test_models_api.py  test_navigation.py  test_navigation_simple.py  test_openrouter_models.py  test_pagination.py  (+25 more)
(+68 files in other folders)
