[project]
name = "cb-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.13.0",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "peewee>=3.18.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a2",
]
